--- a/css/main.css
+++ b/css/main.css
@@ -27,17 +27,39 @@ header{
 
 #main-logo { width: 300px; padding: 10px 0;}
 
-/* main section styles */
+/* main rules */
 #character-nav { 
     text-align: center; 
-    background-image: url('../images/background.jpg'); }
+    background-image: url('../images/background.jpg'); 
+
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-blend-mode: multiply;
+}
 
 .characters {list-style-type: none;}
-.characters li { display: inline-block;}
 
-.characters li img { 
-    width: 150px; 
-    cursor: pointer; }
+.characters li { 
+    display: inline-block;
+    height: 220px;
+    margin: 10px 8px;
+
+    background-color: black;
+
+    text-align: left;
+
+    cursor: pointer;
+}
+
+.characters li h5 { 
+padding: 12px; 8px }
+
+.orange_bumper {
+    width: 100%;
+    height: 6px;
+    background-color: orange;
+}
 
 article { padding: 20px; }
 
@@ -55,13 +77,26 @@ article p {
     width: 80%;
     font-size: 18px;
     line-height: 1.2;
-    text-align: inherit;
+    text-align: center;
     margin: 0 auto;
 }
 
+.sprite {
+    width: 150px;
+    height: 150px;
+
+    background-image: url('../images/sprints.png');
+}
+
+#cups { background-position: -150px; }
+#swords { background-position: -300px; }
+#pentacles { background-position: -450px; }
+
+.spritehover { background-position-y: -150px; !important}
+
 /* footer rules */
 footer {
-    color: white;
+    color: black;
     padding: 20px 0;
     text-align: center;
 }
